--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,4 +51,4 @@ jobs:
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "app-herokua" #Must be unique in Heroku
-          heroku_email: "YOUR EMAIL"
+          heroku_email: ${{secrets.EMAIL}}
